* [nt]roff: The ".trin" (translate but retranslate with ".asciify") and
  ".trnt" (translate but not in transparent mode) requests have been added.
* [nt]roff: The "\n[.dilev]" register contains the current diversion level.
* [nt]roff: The "\B" escape sequence (check for valid numerical expression)
  is now available in regular mode too, not only in groff compatibility mode.
* tbl: Can now optionally use graphic drawing commands (troff "\D") instead
  of repeated-character line drawing (troff "\l" and "\L"). The "graphics"
  option enables it per table, and the "-g" command line option enables it
  globally.
* tbl: The static limits on the number of table lines, columns, and heading
  lines have been removed. In effect, all lines of a table are considered
  when the column widths are computed, and ".T&" can occur at any line.
* tbl: The "nokeep" option causes tbl not to write a ".ne" command for a
  boxed table.
* troff: The CW, CI, CB, and CX fonts no longer substitute the "fi" and "fl"
  ligatures with the "devps" device. This is consistent with "devpost".
* [nt]roff: If a word starts with a motion followed by a hyphenation
  indicator, such as "\h'1m'\%text" or "\|\%text", hyphenation for the
  word is now suppressed, and no hyphen is generated.
* [nt]roff: When text from a diversion is output or rediverted, it is no
  longer subject to character translations specified with ".tr" and ".ftr".
* [nt]roff: In groff compatibility mode, unless a string is interpolated
  with explicit arguments, the arguments to the surrounding macro instance
  remain visible and can be referenced by "\$" from within the string.
* [nt]roff: The ".length" and ".index" request now strip an initial """ in
  their last argument to allow initial white space.
* [nt]roff: The blank line macro is not called when a diversion is reread
  in nofill mode anymore.
* troff: The escape sequence "\s[0]" now resets the point size to the
  previous value as "\s0" does.